# OpenNN

./: .gitignore  CMakeLists.txt  Doxyfile  load_modules.sh
PACS_ANEDP_Project/: Installation_guide.md  README.md
PACS_ANEDP_Project/DatasetGeneration/: generate_training_solutions.m
PACS_ANEDP_Project/DatasetGeneration/SUPGDataset/Test1/: SUPG_100_logspace_4_2.txt  SUPG_150_5_1.txt  SUPG_20_4_2.txt  SUPG_20_logspace_4_2.txt  SUPG_250_6_2.txt  SUPG_300_5_3.txt  SUPG_30_4_2.txt  SUPG_500_4_2.txt  SUPG_50_5_3.txt
PACS_ANEDP_Project/DatasetGeneration/SUPGDataset/Test2/: SUPG_100_4_2.txt  SUPG_100_5_3.txt  SUPG_200_4_2.txt  SUPG_200_5_3.txt  SUPG_400_4_2.txt
PACS_ANEDP_Project/PostProcessing/: after_training.m  best_tau_automatico.m  best_tau_isoglib.m  best_tau_manuale.m  expected_results.m  plot_tau.m
PACS_ANEDP_Project/PostProcessing/SUPGOutput/Test1/: output_150_4_2.txt  output_150_5_1.txt  output_150_6_3.txt  output_250_4_2.txt  output_250_5_1.txt  output_250_6_2.txt
PACS_ANEDP_Project/PostProcessing/SUPGOutput/Test2/: SUPG200_3_1.txt  SUPG2_200_4_2.txt  SUPG2_200_5_3.txt  SUPG2_200_6_3.txt
PACS_ANEDP_Project/SUPGDataset/Test1/: SUPG_150_4_2.txt  SUPG_150_6_3.txt  SUPG_250_4_2.txt  SUPG_250_5_1.txt
SUPGtests/: SUPG_150_7_3.txt  SUPG_160_5_1.txt  SUPG_200_5_2.txt  SUPG_200_6_3.txt  SUPG_200_8_5.txt  output_mu_1e-6_1e-2_250.txt  output_mu_1e-7_1e-2_200.txt
examples/: CMakeLists.txt  examples.pro
examples/2_outputs/: CMakeLists.txt  main.cpp
examples/2_outputs/data/: 2_outputs.txt
examples/SUPG/: CMakeLists.txt  main.cpp  main_old.cpp
examples/SUPG/data/: EDP_solution_loss.txt  SUPG.txt
examples/SUPG/data/Test1/: SUPGdata1.h
examples/SUPG/data/Test2/: SUPG.txt  SUPGdata2.h
examples/SUPG/data/Test2/ref3/: SUPG.txt
examples/airfoil_self_noise/: main.cpp
history/: Appunti.docx  GradientDescent2outputs.docx  GradientDescent2outputs.pages  README_TODO.txt  Test:Validation errors.docx  isoglib_interface_opennn.md
opennn/: CMakeLists.txt  Doxyfile  GuidoVidulisTest.h  SUPGLocalMatrix.hpp  SUPGdataBase.h  adaptive_moment_estimation.cpp  data_set.cpp  data_set.h  gradient_descent.cpp  isoglib_interface.cpp  isoglib_interface.h  matrix.h  neural_network.cpp  neural_network.h  normalized_squared_error.cpp  normalized_squared_error.h  opennn.h  output_function.cpp  output_function.h  testing_analysis.cpp
opennn/OLD/: CMakeLists.txt  GuidoVidulisTest.h  matrix.h  testing_analysis.cpp
